proj1/testing/error/repeatRotors.inp
* B BETA I II I (AAAA)
HELLO WORLD